--- a/index.html
+++ b/index.html
@@ -171,17 +171,7 @@
             </div>
         </div></div></div></div><div class="owl-nav"><button type="button" role="presentation" class="owl-prev"><img class="sliderLeftArrow" src="images/slider-arrow.png"></button><button type="button" role="presentation" class="owl-next"><img class="sliderRightArrow" src="images/slider-arrow.png"></button></div><div class="owl-dots"><button role="button" class="owl-dot"><span></span></button><button role="button" class="owl-dot active"><span></span></button><button role="button" class="owl-dot"><span></span></button><button role="button" class="owl-dot"><span></span></button><button role="button" class="owl-dot"><span></span></button><button role="button" class="owl-dot"><span></span></button><button role="button" class="owl-dot"><span></span></button><button role="button" class="owl-dot"><span></span></button></div></div>
 </div>
-<script id="carouselScripts">
-    $(".carousel .owl-carousel").owlCarousel({
-        loop: true,
-        autoplay: true,
-        margin: 0,
-        nav: true,
-        navText: ["<img class='sliderLeftArrow' src='/images/slider-arrow.png'>", "<img class='sliderRightArrow' src='/images/slider-arrow.png'>"],
-        items: 1,
-        rtl: isRtl
-    });
-</script>
+
 <div class="partners">
 
 
@@ -224,28 +214,7 @@
 
 
 </div>
-<script>
-    $(".partners .owl-carousel").owlCarousel({
-        loop: true,
-        margin: 35,
-        dots: false,
-        //autoWidth:true,
-        responsive: {
-            0: {
-                items: 1,
-                stagePadding: 70
-            },
-            768: {
-                items: 2,
-                stagePadding: 70
-            },
-            992: {
-                items: 4
-            }
-        },
-        rtl: isRtl
-    });
-</script>
+
 
 
 <div id="video" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="my-modal-title" aria-hidden="true">
@@ -592,7 +561,7 @@
                         <div class="card-img">
                             <img class="card-img-top" src="images/blu-ray.png" alt="">
                             <button class="btn btn-video" data-toggle="modal" data-target="#video">
-                                <i class="far fa-play-circle fa-5x text-white"></i>
+                                <img src="images/play_button.png" alt="">
                             </button>
                         </div>
                         
@@ -610,7 +579,7 @@
                         <div class="card-img">
                             <img c lass="card-img-top" src="images/brass.png" alt="">
                             <button class="btn btn-video" data-toggle="modal" data-target="#video">
-                                <i class="far fa-play-circle fa-5x text-white"></i>
+                                <img src="images/play_button.png" alt="">
                             </button>
                         </div>
                         <div class="card-body">
@@ -625,7 +594,7 @@
                         <div class="card-img">
                             <img class="card-img-top" src="images/interfaces.png" alt="">
                             <button class="btn btn-video" data-toggle="modal" data-target="#video">
-                                <i class="far fa-play-circle fa-5x text-white"></i>
+                                <img src="images/play_button.png" alt="">
                             </button>
                         </div>
                         <div class="card-body">
@@ -640,7 +609,7 @@
                         <div class="card-img">
                             <img class="card-img-top" src="images/keyboards.png" alt="">
                             <button class="btn btn-video" data-toggle="modal" data-target="#video">
-                                <i class="far fa-play-circle fa-5x text-white"></i>
+                                <img src="images/play_button.png" alt="">
                             </button>
                         </div>
                         <div class="card-body">
@@ -656,7 +625,7 @@
                         <div class="card-img">
                             <img class="card-img-top" src="images/marching.png" alt="">
                             <button class="btn btn-video" data-toggle="modal" data-target="#video">
-                                <i class="far fa-play-circle fa-5x text-white"></i>
+                                <img src="images/play_button.png" alt="">
                             </button>
                         </div>
                         <div class="card-body">
@@ -671,7 +640,7 @@
                         <div class="card-img">
                             <img class="card-img-top" src="images/multiroom-amplifiers.png" alt="">
                             <button class="btn btn-video" data-toggle="modal" data-target="#video">
-                                <i class="far fa-play-circle fa-5x text-white"></i>
+                                <img src="images/play_button.png" alt="">
                             </button>
                         </div>
                         <div class="card-body">
@@ -967,12 +936,12 @@
         </div>
     </div>
 </footer>
+<script type="text/javascript" src="js/jquery.min2.js"></script>
+<script type="text/javascript" src="js/jquery-ui.min.js"></script>
 <script type="text/javascript" src="js/gsap.min.js"></script>
 <script type="text/javascript" src="js/CustomEase3.min.js"></script>
 <script type="text/javascript" src="js/animate.min.js"></script>
 
-<script type="text/javascript" src="js/jquery.min2.js"></script>
-<script type="text/javascript" src="js/jquery-ui.min.js"></script>
 <!--    <script type="text/javascript"-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 
