--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                     <img class="card-img-top" src="images/blu-ray.png" alt="">
                     <div class="card-body">
                         <h5 class="card-title">Notice Concerning the Results</h5>
-                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nobis, consequatur iste ipsa ratione nihil enim porro provident reiciendis neque nulla voluptates excepturi eius voluptatibus commodi illum. Magnam voluptatum natus deleniti fuga perferendis nobis a saepe unde. Praesentium, optio omnis?</p>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nobis, consequatur iste ipsa ratione nihil enim porro </p>
                     </div>
                 </div>
             </div>
@@ -514,7 +514,7 @@
                     <img class="card-img-top" src="images/brass.png" alt="">
                     <div class="card-body">
                         <h5 class="card-title">How does music make you feel??</h5>
-                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nobis, consequatur iste ipsa ratione nihil enim porro provident reiciendis neque nulla voluptates excepturi eius voluptatibus commodi illum. Magnam voluptatum natus deleniti fuga perferendis nobis a saepe unde. Praesentium, optio omnis?</p>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nobis, consequatur iste ipsa ratione nihil enim porro </p>
                     </div>
                 </div>
             </div>
@@ -523,7 +523,7 @@
                     <img class="card-img-top" src="images/interfaces.png" alt="">
                     <div class="card-body">
                         <h5 class="card-title">PSR A5000 "coming soon"</h5>
-                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nobis, consequatur iste ipsa ratione nihil enim porro provident reiciendis neque nulla voluptates excepturi eius voluptatibus commodi illum. Magnam voluptatum natus deleniti fuga perferendis nobis a saepe unde. Praesentium, optio omnis?</p>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nobis, consequatur iste ipsa ratione nihil enim porro </p>
                     </div>
                 </div>
             </div>
@@ -532,7 +532,7 @@
                     <img class="card-img-top" src="images/brass.png" alt="">
                     <div class="card-body">
                         <h5 class="card-title">PSR A5000 "coming soon"</h5>
-                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nobis, consequatur iste ipsa ratione nihil enim porro provident reiciendis neque nulla voluptates excepturi eius voluptatibus commodi illum. Magnam voluptatum natus deleniti fuga perferendis nobis a saepe unde. Praesentium, optio omnis?</p>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nobis, consequatur iste ipsa ratione nihil enim porro </p>
                     </div>
                 </div>
             </div>
@@ -541,7 +541,7 @@
                     <img class="card-img-top" src="images/blu-ray.png" alt="">
                     <div class="card-body">
                         <h5 class="card-title">How does music make you feel??</h5>
-                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nobis, consequatur iste ipsa ratione nihil enim porro provident reiciendis neque nulla voluptates excepturi eius voluptatibus commodi illum. Magnam voluptatum natus deleniti fuga perferendis nobis a saepe unde. Praesentium, optio omnis?</p>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nobis, consequatur iste ipsa ratione nihil enim porro </p>
                     </div>
                 </div>
             </div>
@@ -577,7 +577,7 @@
                 <div class="item">
                     <div class="card">
                         <div class="card-img">
-                            <img c lass="card-img-top" src="images/brass.png" alt="">
+                            <img class="card-img-top" src="images/brass.png" alt="">
                             <button class="btn btn-video" data-toggle="modal" data-target="#video">
                                 <img src="images/play_button.png" alt="">
                             </button>
